--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build:qq": "taro build --type qq",
     "build:jd": "taro build --type jd",
     "build:quickapp": "taro build --type quickapp",
-    "dev:weapp": "npm run build:weapp -- --watch",
+    "dev:weapp": "taro build --type weapp --watch --env production",
     "dev:swan": "npm run build:swan -- --watch",
     "dev:alipay": "npm run build:alipay -- --watch",
     "dev:tt": "npm run build:tt -- --watch",
@@ -37,43 +37,44 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@nutui/nutui-taro": "^3.1.8",
     "@tarojs/components": "3.5.8",
     "@tarojs/helper": "3.5.8",
-    "@tarojs/plugin-platform-weapp": "3.5.8",
+    "@tarojs/plugin-framework-vue3": "3.5.8",
+    "@tarojs/plugin-html": "3.5.8",
     "@tarojs/plugin-platform-alipay": "3.5.8",
-    "@tarojs/plugin-platform-tt": "3.5.8",
-    "@tarojs/plugin-platform-swan": "3.5.8",
     "@tarojs/plugin-platform-jd": "3.5.8",
     "@tarojs/plugin-platform-qq": "3.5.8",
+    "@tarojs/plugin-platform-swan": "3.5.8",
+    "@tarojs/plugin-platform-tt": "3.5.8",
+    "@tarojs/plugin-platform-weapp": "3.5.8",
     "@tarojs/router": "3.5.8",
     "@tarojs/runtime": "3.5.8",
     "@tarojs/shared": "3.5.8",
     "@tarojs/taro": "3.5.8",
     "@tarojs/taro-h5": "3.5.8",
-    "@tarojs/plugin-html": "3.5.8",
-    "@tarojs/plugin-framework-vue3": "3.5.8",
-    "vue": "^3.0.0",
-    "@nutui/nutui-taro": "^3.1.8"
+    "@vueuse/core": "^9.6.0",
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
-    "@types/webpack-env": "^1.13.6",
-    "webpack": "5.69.0",
-    "@tarojs/webpack5-runner": "3.5.8",
     "@tarojs/cli": "3.5.8",
+    "@tarojs/webpack5-runner": "3.5.8",
+    "@types/webpack-env": "^1.13.6",
+    "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
     "@vue/babel-plugin-jsx": "^1.0.6",
     "@vue/compiler-sfc": "^3.0.0",
-    "babel-preset-taro": "3.5.8",
     "babel-plugin-import": "^1.13.3",
+    "babel-preset-taro": "3.5.8",
     "css-loader": "3.4.2",
-    "eslint-plugin-vue": "^8.0.0",
-    "eslint-config-taro": "3.5.8",
     "eslint": "^8.12.0",
-    "stylelint": "9.3.0",
+    "eslint-config-taro": "3.5.8",
+    "eslint-plugin-vue": "^8.0.0",
     "style-loader": "1.3.0",
+    "stylelint": "9.3.0",
+    "typescript": "^3.7.0",
     "vue-loader": "^17.0.0",
-    "@typescript-eslint/parser": "^5.20.0",
-    "@typescript-eslint/eslint-plugin": "^5.20.0",
-    "typescript": "^3.7.0"
+    "webpack": "5.69.0"
   }
 }
